# Coding-language-

./: .claudeignore  .gitignore  CLAUDE.md  README.md  kestrel-DESIGN.md  kestrel-editor.html  kestrel.js  package.json
.github/workflows/: pages.yml
benchmarks/: .gitignore  results.md  run.sh
benchmarks/array-sum/: bench.rs
benchmarks/bounds-heavy/: bench.rs
benchmarks/fib-recursive/: bench.rs
benchmarks/integer-loop/: bench.rs
benchmarks/parallel-map/: bench.rs
docs/: SYNTAX.md
docs/superpowers/plans/: 2026-07-20-structs.md  2026-07-21-for-loop-syntax-plan.md
docs/superpowers/specs/: 2026-07-20-benchmark-suite-design.md  2026-07-20-structs-design.md  2026-07-20-watch-mode-design.md  2026-07-21-devtool-editor-design.md  2026-07-21-jit-watch-mode-design.md  2026-07-23-type-system-foundation-design.md
examples/: basics.kes  fibonacci.kes  purity_violation.kes
kestrelc/: Cargo.toml  README.md
kestrelc-devtool/: Cargo.toml  ui.html
kestrelc-devtool/src/: main.rs  runner.rs
kestrelc-web/: README.md
kestrelc/runtime/: kestrelc_runtime.c
kestrelc/src/: ast.rs  cache.rs  codegen.rs  cse.rs  error.rs  fusion.rs  inline.rs  interner.rs  jit_codegen.rs  lexer.rs  lib.rs  main.rs  parser.rs  profile.rs  purity.rs  resolve.rs  span.rs  typecheck.rs  wasm_codegen.rs  watch.rs  where_info.rs
kestrelc/tests/: integration.rs
test/: bytecode.test.js  kestrel.test.js
