[package]
name = "kestrelc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kestrelc"
path = "src/main.rs"

[dependencies]
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.12"
wasm-encoder = "0.253.0"
