[package]
name = "kestrelc"
version = "0.1.0"
edition = "2021"

[lib]
name = "kestrelc"
path = "src/lib.rs"

[[bin]]
name = "kestrelc"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
# The native (Cranelift/cc) backend pulls in dependencies that only make
# sense compiling for a real CPU — cranelift-native probes the *host's*
# architecture, and cranelift-object needs a real object-file/linker
# pipeline. Neither belongs in kestrelc-web's wasm32-unknown-unknown
# build, which only needs ast/lexer/parser/purity/wasm_codegen. Gating
# them behind this feature (off by default for `default-features =
# false` dependents) keeps them out of that build entirely rather than
# just unused.
native = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-object",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:target-lexicon",
    "dep:notify",
]

[dependencies]
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-object = { version = "0.116", optional = true }
# `kestrelc watch`'s in-process execution path only -- see jit_codegen.rs.
# Gated behind "native" like every other Cranelift dep, for the same
# reason (irrelevant to kestrelc-web's wasm32 build).
cranelift-jit = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
target-lexicon = { version = "0.12", optional = true }
wasm-encoder = "0.253.0"
# `kestrelc watch` only -- file-system watching for the native-only watch
# subcommand. Gated behind "native" like the Cranelift deps above, for
# the same reason (kestrelc-web's wasm32 lib build has no use for it and
# notify's OS-level watching wouldn't compile there anyway).
notify = { version = "6", optional = true }
