[package]
name = "kestrelc"
version = "0.1.0"
edition = "2021"

[lib]
name = "kestrelc"
path = "src/lib.rs"

[[bin]]
name = "kestrelc"
path = "src/main.rs"
required-features = ["native"]

[features]
default = ["native"]
# The native (Cranelift/cc) backend pulls in dependencies that only make
# sense compiling for a real CPU — cranelift-native probes the *host's*
# architecture, and cranelift-object needs a real object-file/linker
# pipeline. This feature gate is a holdover from when a wasm32-unknown-
# unknown build (kestrelc-web, since removed) needed to exclude them;
# every remaining dependent builds with default features, but the gate
# is left in place rather than unwound as part of this change.
native = [
    "dep:cranelift-codegen",
    "dep:cranelift-frontend",
    "dep:cranelift-module",
    "dep:cranelift-object",
    "dep:cranelift-jit",
    "dep:cranelift-native",
    "dep:notify",
]

[dependencies]
cranelift-codegen = { version = "0.116", optional = true }
cranelift-frontend = { version = "0.116", optional = true }
cranelift-module = { version = "0.116", optional = true }
cranelift-object = { version = "0.116", optional = true }
# `kestrelc watch`'s in-process execution path only -- see jit_codegen.rs.
# Gated behind "native" like every other Cranelift dep.
cranelift-jit = { version = "0.116", optional = true }
cranelift-native = { version = "0.116", optional = true }
# `kestrelc watch` only -- file-system watching for the native-only watch
# subcommand. Gated behind "native" like the Cranelift deps above.
notify = { version = "6", optional = true }
